[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "docker"
dynamic = ["version"]
description = "A Python library for the Docker Engine API."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8"
maintainers = [
    { name = "Docker Inc.", email = "no-reply@docker.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Other Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development",
    "Topic :: Utilities",
]

dependencies = [
    "requests >= 2.26.0",
    "urllib3 >= 1.26.0",
    "pywin32>=304; sys_platform == \"win32\"",
]

[project.optional-dependencies]
ssh = [
    "paramiko>=2.4.3",
]
tls = []  # kept for backwards compatibility
websockets = [
    "websocket-client >= 1.3.0",
]

[project.urls]
Changelog = "https://docker-py.readthedocs.io/en/stable/change-log.html"
Documentation = "https://docker-py.readthedocs.io"
Homepage = "https://github.com/docker/docker-py"
Source = "https://github.com/docker/docker-py"
Tracker = "https://github.com/docker/docker-py/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "docker/_version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/docker",
]

[tool.ruff]
target-version = "py38"
extend-select = [
    "B",
    "C",
    "F",
    "I",
    "UP",
    "W",
]
ignore = [
    "UP012",  # unnecessary `UTF-8` argument (we want to be explicit)
    "C901",  # too complex (there's a whole bunch of these)
]

[tool.ruff.per-file-ignores]
"**/__init__.py" = ["F401"]
